8. AURA/custom-bell-notifications-to-users/src/objects/Notification__e.object
<CustomObject>
    <fields>
        <fullName>IsError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsError</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Notification</label>
    <pluralLabel>Notificaions</pluralLabel>
</CustomObject>